# RedArc

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: DESIGN_OVERVIEW.md  DEVELOPMENT_PLAN.md
docs/ADR/: ADR-001-Project-Structure.md
src/redarc/: tracker.py  utils.py
